{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 45,
  "lineage": "092db592-3fc7-4784-06d8-542d1b6a68a4",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:security-group/sg-0aba03edc334279c0",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0aba03edc334279c0",
            "ingress": [],
            "name": "sungbin-eks-cluster-2025050204355549140000000b",
            "name_prefix": "sungbin-eks-cluster-",
            "owner_id": "544264220406",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sungbin-eks-cluster",
              "kubernetes.io/cluster/sungbin-eks": "owned"
            },
            "tags_all": {
              "Name": "sungbin-eks-cluster",
              "kubernetes.io/cluster/sungbin-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:security-group/sg-0a702c5e6abfba186",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a702c5e6abfba186",
            "ingress": [],
            "name": "sungbin-eks-node-2025050204355523190000000a",
            "name_prefix": "sungbin-eks-node-",
            "owner_id": "544264220406",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sungbin-eks-node",
              "kubernetes.io/cluster/sungbin-eks": "owned"
            },
            "tags_all": {
              "Name": "sungbin-eks-node",
              "kubernetes.io/cluster/sungbin-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2509588141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aba03edc334279c0",
            "security_group_rule_id": "sgr-06291da80a8e7d277",
            "self": false,
            "source_security_group_id": "sg-0a702c5e6abfba186",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-787762681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-0e71d62be2640a62d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1440349748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-085b44e5ed0438fed",
            "self": false,
            "source_security_group_id": "sg-0aba03edc334279c0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2322045712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-02bb7bd54d815ab53",
            "self": false,
            "source_security_group_id": "sg-0aba03edc334279c0",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1126562950",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-0f3b3d663d207ec57",
            "self": false,
            "source_security_group_id": "sg-0aba03edc334279c0",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1350156455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-0a3ae0c48d4f83b61",
            "self": false,
            "source_security_group_id": "sg-0aba03edc334279c0",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-886633324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-07573387ab5034a47",
            "self": false,
            "source_security_group_id": "sg-0aba03edc334279c0",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4247906129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-08ab9b0a327c5f427",
            "self": false,
            "source_security_group_id": "sg-0aba03edc334279c0",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2463692826",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-0b2fc104e38c4be8c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-788822752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-0e462ba1701e35c26",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2338052367",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a702c5e6abfba186",
            "security_group_rule_id": "sgr-079da73018b71cb99",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:network-acl/acl-0502ddbbb8148f05b",
            "default_network_acl_id": "acl-0502ddbbb8148f05b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0502ddbbb8148f05b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "544264220406",
            "subnet_ids": [
              "subnet-0006f39482ed5133d",
              "subnet-0486779026198dcdf",
              "subnet-06d72eab362c02fe7",
              "subnet-08fbb5857090f87c6"
            ],
            "tags": {
              "Name": "sungbin-vpc-default",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-default",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:route-table/rtb-0b17c26cda3d52314",
            "default_route_table_id": "rtb-0b17c26cda3d52314",
            "id": "rtb-0b17c26cda3d52314",
            "owner_id": "544264220406",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "sungbin-vpc-default",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-default",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:security-group/sg-0443dbae1dad20127",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0443dbae1dad20127",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "544264220406",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sungbin-vpc-default",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-default",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094719faea4590d8a",
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:elastic-ip/eipalloc-094719faea4590d8a",
            "domain": "vpc",
            "id": "eipalloc-094719faea4590d8a",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-79-240.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.79.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sungbin-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:internet-gateway/igw-062b10204ae4ff052",
            "id": "igw-062b10204ae4ff052",
            "owner_id": "544264220406",
            "tags": {
              "Name": "sungbin-vpc",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094719faea4590d8a",
            "association_id": "eipassoc-003df32d2e230fdb0",
            "connectivity_type": "public",
            "id": "nat-07e1310881f970a38",
            "network_interface_id": "eni-07fc3bb22bec5ddaa",
            "private_ip": "10.0.1.157",
            "public_ip": "13.124.79.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0006f39482ed5133d",
            "tags": {
              "Name": "sungbin-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e961c8d1458422a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07e1310881f970a38",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e961c8d1458422a8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-062b10204ae4ff052",
            "id": "r-rtb-0d671827e3120089a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d671827e3120089a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:route-table/rtb-0e961c8d1458422a8",
            "id": "rtb-0e961c8d1458422a8",
            "owner_id": "544264220406",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sungbin-vpc-private",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-private",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:route-table/rtb-0d671827e3120089a",
            "id": "rtb-0d671827e3120089a",
            "owner_id": "544264220406",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sungbin-vpc-public",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-public",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e7e1dca35dcaaaa",
            "route_table_id": "rtb-0e961c8d1458422a8",
            "subnet_id": "subnet-0486779026198dcdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca9722f977f7637b",
            "route_table_id": "rtb-0e961c8d1458422a8",
            "subnet_id": "subnet-08fbb5857090f87c6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08320177eb8ebe1c5",
            "route_table_id": "rtb-0d671827e3120089a",
            "subnet_id": "subnet-0006f39482ed5133d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcdc6d6fdb8ca13f",
            "route_table_id": "rtb-0d671827e3120089a",
            "subnet_id": "subnet-06d72eab362c02fe7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:subnet/subnet-0486779026198dcdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0486779026198dcdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544264220406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sungbin-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:subnet/subnet-08fbb5857090f87c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fbb5857090f87c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544264220406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sungbin-vpc-private-ap-northeast-2b",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-private-ap-northeast-2b",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:subnet/subnet-0006f39482ed5133d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006f39482ed5133d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544264220406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sungbin-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:subnet/subnet-06d72eab362c02fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d72eab362c02fe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "544264220406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sungbin-vpc-public-ap-northeast-2b",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc-public-ap-northeast-2b",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "vpc_id": "vpc-0c8d5491b8e068183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:544264220406:vpc/vpc-0c8d5491b8e068183",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0502ddbbb8148f05b",
            "default_route_table_id": "rtb-0b17c26cda3d52314",
            "default_security_group_id": "sg-0443dbae1dad20127",
            "dhcp_options_id": "dopt-051bde9a57c0d229b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c8d5491b8e068183",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b17c26cda3d52314",
            "owner_id": "544264220406",
            "tags": {
              "Name": "sungbin-vpc",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            },
            "tags_all": {
              "Name": "sungbin-vpc",
              "kubernetes.io/cluster/sungbin-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}